[package]
name = "burnboard"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal.git", features = [
		"ch32v203g6u6",
		"embassy",
		"time-driver-tim2",
		"rt",
] }

embassy-executor = { version = "0.6.0", features = [
	"nightly",
	"integrated-timers",
	"arch-riscv32",
	"executor-thread",
] }

embassy-time = { version = "0.3.2" }
embassy-usb = "0.3.0"
embassy-futures = { version = "0.1" }
qingke-rt = "0.2.1"
qingke = "0.2.0"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
usbd-hid = "0.8"
heapless = "0.8"

defmt = "0.3"
defmt-rtt = "0.4"

[profile.release]
strip = false
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
